--- a/gs-accessing-data-jpa/src/main/resources/application.properties
+++ b/gs-accessing-data-jpa/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=mysql
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
