--- a/dop-spring-101/12-spring-jsr-annotations/pom.xml
+++ b/dop-spring-101/12-spring-jsr-annotations/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jvosantos.examples</groupId>
-    <artifactId>spring-autowire-annotations</artifactId>
+    <artifactId>spring-jsr-annotations</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Example of spring autowire with annotations</name>
+    <name>Example of spring with jsr annotations</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
